Using wrapper instead of container

--- a/lib-core/sass/core/_grid.sass
+++ b/lib-core/sass/core/_grid.sass
@@ -36,7 +36,7 @@ $showColumns:        $phablet          // Allow < 12 columns
 $showPartialColumns: $tablet           // Simpler alternative to actual columns
 $showFullColumns:    $desktop          // Actual user-defined column measurement
 
-=container-default($fluid: false)
+=wrapper-default($fluid: false)
   margin: 0px auto
   
   @if $fluid == false
