--- a/lib-core/sass/core/components/_navbar.sass
+++ b/lib-core/sass/core/components/_navbar.sass
@@ -17,12 +17,12 @@
 
 =navbar-fluid($breakpoint: $tablet)
   nav
-    +container(true)
+    +wrapper(true)
     +navbar-align_menus($breakpoint)
 
 =navbar-fluid_fixed($breakpoint: $tablet)
   nav
-    +container(false)
+    +wrapper(false)
     +navbar-align_menus($breakpoint)
 
 =navbar-collapse($breakpoint: $tablet)
