--- a/lib-docs/jade/tests/static.jade
+++ b/lib-docs/jade/tests/static.jade
@@ -12,7 +12,7 @@ html
       }
 
   body
-    .container
+    .wrapper
       h1 Static tests
       h2 Grid
       h3 Regular columns
@@ -31,7 +31,7 @@ html
         .col-3: .column-example Test
         .col-3: .column-example Test
 
-    .container
+    .wrapper
       h2 Navigation
 
       .navbar
