--- a/lib-docs/sass/pages/docs/index.sass
+++ b/lib-docs/sass/pages/docs/index.sass
@@ -37,7 +37,7 @@ h3, h4, h5, h6
   margin-top: -$space
 
   @media screen and (max-width: $phablet)
-    +container
+    +wrapper
 
   .fixed-main, .fixed-toc
     @media screen and (min-width: $phablet)
