--- a/lib-docs/sass/pages/index.sass
+++ b/lib-docs/sass/pages/index.sass
@@ -8,7 +8,7 @@ img
   max-width: 100%
 
 .home-wrapper
-  +container 
+  +wrapper
   margin: 
     top: calc(#{$space} + 10vw)
     bottom: calc(#{$space} + 10vw)
