--- a/lib-docs/sass/themes/default/theme.sass
+++ b/lib-docs/sass/themes/default/theme.sass
@@ -54,8 +54,8 @@ $rootElement: (paddingV: 5px, paddingH: 12px, border-radius: 3px)
 
 // Grid
 
-=container($args...)
-  +container-default($args...)
+=wrapper($args...)
+  +wrapper-default($args...)
 
 // Typography
 // ----------
