Adding effect to button dropdown

--- a/lib-core/sass/core/components/_buttons.sass
+++ b/lib-core/sass/core/components/_buttons.sass
@@ -107,6 +107,7 @@
   margin-top: 5px
   right: -$space
   border: 1px solid map-get($white, darker)
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2)
 
 =button-group-default($background-color: map-get($white, darker), $size: 1)
   list-style: none
