--- a/lib-docs/sass/themes/default/theme.sass
+++ b/lib-docs/sass/themes/default/theme.sass
@@ -167,6 +167,12 @@ html
 =button-group($args...)
   +button-group-default($args...)
 
+=button-color($args...)
+  +button-color-default($args...)
+
+=button-size($args...)
+  +button-size-default($args...)
+
 // HR
 // --
 
