--- a/lib-docs/sass/docs.sass
+++ b/lib-docs/sass/docs.sass
@@ -4,7 +4,7 @@
 // Page-level styling goes elsewhere.
 
 // Choose your theme
-@import themes/strands/theme
+@import themes/default/theme
 
 // Basic layout
 // ------------
