--- a/lib-docs/sass/pages/docs/index.sass
+++ b/lib-docs/sass/pages/docs/index.sass
@@ -2,7 +2,7 @@
 // ==================
 // Generic styles that should be shared across the documentation
 
-@import themes/default/theme
+@import chosen-theme
 
 h1
   +heading-rg
