--- a/lib-core/sass/core/components/_navbar.sass
+++ b/lib-core/sass/core/components/_navbar.sass
@@ -55,7 +55,7 @@
   right: 0
   top: 0
 
-=navbar-color($background-color)
+=navbar-color-default($background-color)
   background-color: $background-color
 
   nav
