--- a/lib-docs/sass/themes/default/theme.sass
+++ b/lib-docs/sass/themes/default/theme.sass
@@ -203,6 +203,9 @@ hr
 =navbar($args...)
   +navbar-default($args...)
 
+=navbar-color($args...)
+  +navbar-color-default($args...)
+
 =dropdown_menu
   +dropdown_menu-default
 
@@ -211,6 +214,18 @@ hr
 
 =table($args...)
   +table-default($args...)
+
+=table-zebra($args...)
+  +table-zebra-default($args...)
+
+=table-hover($args...)
+  +table-hover-default($args...)
+
+=table-bordered($args...)
+  +table-bordered-default($args...)
+
+=table-blank($args...)
+  +table-blank-default($args...)
 
 //
 // Dependent Components
