--- a/lib-core/sass/core/components/_tables.sass
+++ b/lib-core/sass/core/components/_tables.sass
@@ -50,7 +50,7 @@
 
   @content
 
-=table-bordered
+=table-bordered-default
   td
     border-bottom-color: inherit
     border-bottom-width: 1px
@@ -59,7 +59,7 @@
   thead
     border-bottom-color: inherit
 
-=table-blank
+=table-blank-default
   border-color: transparent
   background: transparent
   table, tr, td, tbody, thead, th, tfoot
@@ -70,7 +70,7 @@
       left: 0px
       right: 0px
 
-=table-hover
+=table-hover-default
   tbody, thead
     tr:hover
       background-color: $primary-color
@@ -78,7 +78,7 @@
       td, th
         color: white
 
-=table-zebra
+=table-zebra-default
   tbody, thead
     tr:nth-child(even)
       background-color: map-get($white, dark)
