--- a/lib-docs/sass/pages/docs/index.sass
+++ b/lib-docs/sass/pages/docs/index.sass
@@ -238,7 +238,7 @@ code, pre, kbd, samp
 // Main page overrides
 .main-navigation
   .svg-logo, .svg-logo-small
-    fill: map-get($black, lighter)
+    fill: map-get($colors, blue)
 
   +navbar($collapse: true, $background-color: white)
 
