--- a/lib-core/sass/core/components/_navbar.sass
+++ b/lib-core/sass/core/components/_navbar.sass
@@ -161,8 +161,7 @@
           align-items: center
 
           @media screen and (min-width: $breakpoint)
-            padding: 0
-              left: (2 * map-get($rootElement, paddingV) - 1)
+            padding: 0 (map-get($rootElement, paddingH))
 
             > h1, > h2, > h3, > h4, > h5, > h6
               padding: (map-get($rootElement, paddingV) - 1) (map-get($rootElement, paddingH))
