--- a/lib-core/sass/core/components/_notifications.sass
+++ b/lib-core/sass/core/components/_notifications.sass
@@ -6,6 +6,11 @@
   z-index: 2000 // Above modal
   display: flex
   pointer-events: none
+  transition: transform 0.25s
+  transform: translateY(0px)
+
+  &.hide
+    transform: translateY(-40px)
 
   .status_bar-status
     +label(map-get($colors, yellow))
