--- a/lib-docs/sass/pages/docs/ui/notifications.sass
+++ b/lib-docs/sass/pages/docs/ui/notifications.sass
@@ -1,17 +1,16 @@
 @import ../../chosen-theme
 
 .growl
-  +alert
-
-  &.alert-yellow
+  &.growl-yellow, &.growl-warn
     background-color: map-get($colors, yellow)
     color: black
 
-  &.alert-red
+  &.growl-red, &.growl-error
     background-color: map-get($colors, red)
 
-  &.alert-blue
+  &.growl-blue, &.growl-info
     background-color: map-get($colors, blue)
 
-  &.alert-green
+  &.growl-green, &.growl-success
     background-color: map-get($colors, green)
+
