--- a/lib-core/sass/core/_direct-apply.sass
+++ b/lib-core/sass/core/_direct-apply.sass
@@ -156,9 +156,10 @@ form
   display: block
   opacity: 0
   bottom: 100%
+  left: 50%
+  margin-left: -20px
   box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.25)
   pointer-events: none
-  max-width: 350px
   min-width: 100px
   text-align: center
   transition: all 0.25s
@@ -283,16 +284,19 @@ form
 
 .tooltip
   +tooltip_base
-  left: -30px
-  right: -30px
   transform: translateY(8px)
   z-index: 10
   +label(map-get($colors, blue))
   margin: 10px auto
+  left: 25%
+  border-top-color: map-get($colors, blue)
 
   &:after
     +tooltip_arrow
     top: 100%
+    left: 0
+    margin-left: 8px
+    border-top-color: inherit
 
   &.tooltip-bottom
     top: 100%
@@ -333,24 +337,33 @@ form
 
   &.tooltip-red
     background-color: map-get($colors, red)
+    border-top-color: map-get($colors, red)
 
   &.tooltip-orange
     background-color: map-get($colors, orange)
+    border-top-color: map-get($colors, orange)
 
   &.tooltip-yellow
     background-color: map-get($colors, yellow)
+    border-top-color: map-get($colors, yellow)
+    color: $default-font-color
 
   &.tooltip-green
     background-color: map-get($colors, green)
+    border-top-color: map-get($colors, green)
 
   &.tooltip-blue
     background-color: map-get($colors, blue)
+    border-top-color: map-get($colors, blue)
 
   &.tooltip-violet
     background-color: map-get($colors, violet)
+    border-top-color: map-get($colors, violet)
 
   &.tooltip-primary
     background-color: $primary-color
+    border-top-color: $primary-color
 
   &.tooltip-secondary
     background-color: $secondary-color
+    border-top-color: $secondary-color
