--- a/lib-core/sass/core/_direct-apply.sass
+++ b/lib-core/sass/core/_direct-apply.sass
@@ -162,7 +162,8 @@ form
   pointer-events: none
   min-width: 100px
   text-align: center
-  transition: all 0.25s
+  pointer-events: none
+  transition: transform 0.25s
 
 =tooltip_arrow
   border-top-style: solid
@@ -177,6 +178,7 @@ form
   position: absolute
   left: 50%
   margin-left: -8px
+  pointer-events: none
   opacity: 0
 
 =pseudo-tooltip-color($color: $primary-color)
