--- a/lib-core/sass/core/components/_tooltips.sass
+++ b/lib-core/sass/core/components/_tooltips.sass
@@ -1,3 +1,7 @@
+=force-gone
+  top: -9999px
+  bottom: auto
+
 =tooltip_trigger-default($background-color: false)
   position: relative
   display: inline-block
@@ -7,7 +11,26 @@
     .tooltip
       +label($background-color)
 
-  &:hover
+  &:not(:hover)
+    [data-ks-tooltip]
+      &:not(:hover)
+        &:after, &:before
+          +force-gone
+
+  [data-ks-tooltip]
+    &:hover 
+      &:after, &:before
+        opacity: 1
+
+      &:after
+        transform: translateY(-8px)
+        transition: transform 0.25s
+
+  &:not(:hover)
+    .tooltip
+      +force-gone
+
+  &:hover 
     [data-ks-tooltip]
       &:after, &:before
         opacity: 1
