Making images into containers page

--- a/lib-docs/jade/docs/3.x/_header.jade
+++ b/lib-docs/jade/docs/3.x/_header.jade
@@ -17,9 +17,9 @@
         ul
           li: a(href="/docs/#{docsVersion}/ui/alerts") Alerts
           li: a(href="/docs/#{docsVersion}/ui/buttons") Buttons
+          li: a(href="/docs/#{docsVersion}/ui/containers") Containers
           li: a(href="/docs/#{docsVersion}/ui/forms") Forms
           li: a(href="/docs/#{docsVersion}/ui/icons") Icons
-          li: a(href="/docs/#{docsVersion}/ui/images") Images
           li: a(href="/docs/#{docsVersion}/ui/labels") Labels
           li: a(href="/docs/#{docsVersion}/ui/modals") Modals
           li: a(href="/docs/#{docsVersion}/ui/navigation") Navigation
