--- a/lib-docs/jade/docs/3.x/ui/containers/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/containers/index.jade
@@ -5,10 +5,10 @@ block variables
   - var title = "Icons"
 
 block hero-title
-  h1 Images
+  h1 Containers
 
 block ui-stylesheet
-  link(rel="stylesheet" href="/css/pages/docs/ui/images.css")
+  link(rel="stylesheet" href="/css/pages/docs/ui/containers.css")
 
 block documents
   .document
