--- a/lib-docs/sass/themes/default/theme.sass
+++ b/lib-docs/sass/themes/default/theme.sass
@@ -173,6 +173,12 @@ html
 =button-size($args...)
   +button-size-default($args...)
 
+// Containers
+// ----------
+
+=container($args...)
+  +container-default($args...)
+
 // HR
 // --
 
