--- a/lib-core/sass/core/_base_components.sass
+++ b/lib-core/sass/core/_base_components.sass
@@ -6,7 +6,7 @@
 @import components/_alerts
 @import components/_buttons
 @import components/_hr
-@import components/_images
+@import components/_containers
 @import components/_labels
 @import components/_modals
 @import components/_progress
