--- a/lib-docs/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/buttons/index.jade
@@ -62,6 +62,8 @@ block documents
           For colored buttons, simply add the `.button-` class of one of the primary colors
           to the `.button` class.
 
+        +available-colors('button')
+
       .if-semantic 
         :markdown
           For colored buttons, simply pass in a color to `button()`.
@@ -81,6 +83,7 @@ block documents
           better to use the `button-color()` mixin. This is the same
           mixin used from inside of `button()`. Using this method avoids
           repetitive CSS.
+
 
     article.code
       .ifnot-semantic
