--- a/lib-docs/sass/themes/default/theme.sass
+++ b/lib-docs/sass/themes/default/theme.sass
@@ -179,6 +179,9 @@ html
 =container($args...)
   +container-default($args...)
 
+=container-color($args...)
+  +container-color-default($args...)
+
 // HR
 // --
 
