--- a/lib-docs/sass/pages/docs/index.sass
+++ b/lib-docs/sass/pages/docs/index.sass
@@ -150,7 +150,7 @@ h3, h4, h5, h6
     margin-top: -60px
     padding-top: 60px
 
-  .alert, .thumbnail-content article, .modal, .modal-example
+  .alert, .thumbnail-content article, .modal, .modal-example, header, footer
     h1:first-child
       margin-top: 0
       padding-top: 0
