--- a/lib-docs/sass/pages/docs/ui/containers.sass
+++ b/lib-docs/sass/pages/docs/ui/containers.sass
@@ -6,8 +6,17 @@
   &.container-blue
     +container-color(map-get($colors, blue))
 
+form
+  +form
+
+.form_group
+  +form_group
+
 .thumbnail
   +thumbnail
 
-.thumbnail-content
+.thumbnail-content, .profile
   +thumbnail_content
+
+.navigation
+  +navbar
