Allowing navbar to be instantiated automatically.

--- a/lib-docs/jade/docs/3.x/ui/containers/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/containers/index.jade
@@ -246,7 +246,7 @@ block documents
         ## With other components
 
       .container
-        header.navigation
+        header.navigation(data-ks-navbar)
           nav
             ul
               li.navbar-title
