Adding borders to navbars and documenting instantiation of navbars via data attrs

--- a/lib-core/sass/core/components/_navbar.sass
+++ b/lib-core/sass/core/components/_navbar.sass
@@ -194,6 +194,9 @@
         &.menu-item // Added via k$.nav()
           padding: (2 * map-get($rootElement, paddingV) - 1) (map-get($rootElement, paddingH))
           cursor: pointer
+          border:
+            left: 1px solid transparent
+            right: 1px solid transparent
 
           ul
             box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1)
