--- a/lib-core/sass/core/components/_forms.sass
+++ b/lib-core/sass/core/components/_forms.sass
@@ -27,7 +27,7 @@ label, legend
 
   &:focus
     outline: 0px
-    box-shadow: 0px 0px 0px 2px $primary-color
+    box-shadow: inset 0px 0px 0px 2px $primary-color
 
   @content
 
