Fixing TOC screen-fixing

--- a/lib-docs/sass/docs.sass
+++ b/lib-docs/sass/docs.sass
@@ -15,6 +15,15 @@ body
 .wrapper
   +wrapper
 
+.bleed
+  max-width: $xl-monitor
+  margin: 0px auto
+  display: block
+  position: relative
+
+  @media screen and (min-width: $xxl-monitor)
+    max-width: $xxl-monitor
+
 // Navigation
 // ----------
 
