--- a/lib-docs/jade/_layout.jade
+++ b/lib-docs/jade/_layout.jade
@@ -37,33 +37,31 @@ html(lang='en')
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 
   body
-    header.fixed
-      include _header
-      block header
+    .bleed
+      header.fixed
+        include _header
+        block header
 
-    block hero
+      block hero
 
-    main.main
-      block content
+      main.main
+        block content
 
-    - if (showFooter == true)
-      footer.main 
-        - var xml = fs.readFileSync('lib-docs/img/everythingio.svg')
-        
-        .wrapper
-          p
-            span.eio-logo!= xml
-            |  Made by&nbsp;
-            a(href="http://twitter.com/everythingdotio") Everything
+      - if (showFooter == true)
+        footer.main 
+          - var xml = fs.readFileSync('lib-docs/img/everythingio.svg')
+          
+          .wrapper
+            p
+              span.eio-logo!= xml
+              |  Made by&nbsp;
+              a(href="http://twitter.com/everythingdotio") Everything
 
-    - else
-      script(src="/js/navbar-fixer.js")
+      - else
+        script(src="/js/navbar-fixer.js")
     block preJS
 
     script(src="/js/docs.js")
-
-    script.
-      k$.nav('.main-navigation')
 
     block postJS
     script(src="//use.typekit.net/iqk4yxz.js")
