Fixing something that should have displayed as a bug

--- a/lib-core/sass/core/components/_navbar.sass
+++ b/lib-core/sass/core/components/_navbar.sass
@@ -310,6 +310,6 @@
   @if ($collapse == true)
     +navbar-collapse($breakpoint)
 
-  +navbar-color($background-color)
+  +navbar-color-default($background-color)
 
   @content
